			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard
25-Jul-2000
~~~~~~~~~~~
The new display styles can now be saved as the defaults (bug spotted by
Vladimir Klebanov).

When autoscrolling is used, prevent the last-highlighted directory
from springing open. 'spring open' now defaults to off.

The toolbar Up and Home buttons can act as drop targets (and spring open
too!).

Options to set the pinboard text background style.

23-Jul-2000
~~~~~~~~~~~
Added an option to control the spring-loading feature. Added tooltips
to some of the options. Improved the rule for deciding whether to open
a new window when you click on the toolbar buttons.

Stopped the spring-open window moving while it's open (prevents a bug
in GTK+ from causing problems). Please use GTK+ 1.2.8 or later now!

Dragging near the edge of a window scrolls. Improved the lasso box drag
to use the same system (so it scrolls without you having to move the
mouse).

22-Jul-2000
~~~~~~~~~~~
Added 'spring-loaded' directories. If you drag a file over a directory and
hold it there, the directory will spring open!

21-Jul-2000
~~~~~~~~~~~
In the path entry minibuffer, an exact match is favoured over any other
match. So, if you enter '.xsession' and press Return you'll get it, not
'.xsession-errors' or whatever!

The filer now clears APP_DIR from the environment so that child processes
don't get it. Fixed a bug which caused problems when using a small version
of the 'missing image' image.

19-Jul-2000
~~~~~~~~~~~
Creating a new directory now makes sure the display is updated.

18-Jul-2000 (Release 0.1.25)
~~~~~~~~~~~
Prevent dragging from a pinboard selection to itself, or onto the desktop
background.

17-Jul-2000
~~~~~~~~~~~
Clicking on the root window works (button-1 clears the selection,
button-3 opens the pinboard menu). The pinboard can own the primary
selection, which means that you can select something and then paste
its name into another program.
