@@ -50,7 +50,7 @@ First, a few people/projects whose work I've used:
 	Andrew Clover		most of the file icons
 	David MacKenzie		the code for parsing Permissions commands
 	John Lindal		co-author of the XDS protocol
-	Midnight Commander	the Virtual File System library
+	Midnight Commander	the Virtual File System library, pinboard bits
 	GNOME Desktop		some of the icons (including the toolbar)
 
 And now, people who've actually written bits of it ;-)
