@@ -17,8 +17,6 @@ directory in its new location until you click refresh.
 
 MISSING FEATURES
 
-Tab to next selected item.
-
 Allow applets inside the panel? Allow the filer to go inside GNOME-panel
 and similar?
 
