@@ -1,6 +1,11 @@
 			ROX-Filer
 			A RISC OS-like filer for X
 			by Thomas Leonard
+
+26-Jul-2000
+~~~~~~~~~~~
+Tab and Shift-Tab move to next and previous selected item.
+
 25-Jul-2000
 ~~~~~~~~~~~
 The new display styles can now be saved as the defaults (bug spotted by
@@ -12,7 +17,8 @@ from springing open. 'spring open' now defaults to off.
 The toolbar Up and Home buttons can act as drop targets (and spring open
 too!).
 
-Options to set the pinboard text background style.
+Options to set the pinboard text background style (suggested by James
+Kermode).
 
 23-Jul-2000
 ~~~~~~~~~~~
@@ -30,7 +36,8 @@ mouse).
 22-Jul-2000
 ~~~~~~~~~~~
 Added 'spring-loaded' directories. If you drag a file over a directory and
-hold it there, the directory will spring open!
+hold it there, the directory will spring open! (suggested by Barney
+Clarkson)
 
 21-Jul-2000
 ~~~~~~~~~~~
